Fixed input/select alignment to left in range inputs

--- a/styles/components/range.scss
+++ b/styles/components/range.scss
@@ -230,8 +230,8 @@
   .range-input {
     width: auto;
     text-align: center;
-    input {
-      text-align: center;
+    input, .select {
+      text-align: left;
     }
     .step {
       color: var(--step-color);
